# irhm

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: style.yml  test.yml
irhm/: __init__.py  _datasets.py
irhm/pt_docs/: index.rst
tests/: __init__.py  test_dataset.py  test_irhm.py
